--- a/task05/app/lambdas/api_handler/lambda_config.json
+++ b/task05/app/lambdas/api_handler/lambda_config.json
@@ -13,5 +13,6 @@
   "env_variables": {},
   "publish_version": false,
   "url_config": {},
-  "ephemeral_storage": 512
+  "ephemeral_storage": 512,
+  "target_table": "Events"
 }
